--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
   <title>Document</title>
 </head>
 <body>
-  <h1 id="Dmitry">Dmitry Berdnik</h1>
-  <hr>
+  <div class="container">
+  <main class="flex item-1">
+    <h1 id="Dmitry">Dmitry Berdnik</h1>
+  </main>
+<hr>
+  <main class="flex item-2">
   <h2>Contact:</h2>
   <ul>
     <li>Mobile phone: +375333590326</li>
@@ -16,12 +20,16 @@
     <li>Email: <a href="mailto:ukaay123@gmail.com">ukaay123@gmail.com </a> </li>
     <li>Telegram: @Dmitry_B95</li>
   </ul>
+    </main> 
   <hr>
+  <main class="flex item-3">
   <h2>Education:</h2>
 <ul> 
   <li> <a href="https://bseu.by" target="_blank">BSEU</a> (2013-2017) </li>
 </ul>
+</main>
 <hr>
+<main class="flex item-4">
 <h2>About:</h2>
 <p>
   I am 28 years old.<br>
@@ -29,7 +37,9 @@
   Decided to become a web developer.<br>
   I want to gain knowledge and skills that will allow me to become a Fron-end developer.
 </p>
+</main>
 <hr>
+<main class="flex item-5">
 <h2>Skills:</h2>
 <ol>
   <li>HTML</li>
@@ -38,7 +48,9 @@
   <li>VS Code</li>
   <li>JavsSkript</li>
 </ol>
+</main>
 <hr>
+<main class="flex item-6">
 <h2>Example code:</h2>
 <pre> 
   <code>
@@ -55,10 +67,15 @@
 &lt/html&gt
   </code>
 </pre>
+</main>
+<hr>
+<main class="flex item-7">
 <h2>Languages:</h2>
 <ul>
   <li>Russian - Native</li>
   <li>English - A1</li>
 </ul>
+</main> 
+</div>
 </body>
 </html>
