--- a/index.html
+++ b/index.html
@@ -1,58 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <link rel="stylesheet" href="style.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  <div class="container">
-  <main class="flex item-1">
-    <h1 id="Dmitry">Dmitry Berdnik</h1>
-  </main>
-<hr>
-  <main class="flex item-2">
-  <h2>Contact:</h2>
-  <ul>
-    <li>Mobile phone: +375333590326</li>
-    <li> GitHub: <a href="https://github.com/Dmitry0109" target="_blank">Dmitry0109 </a> </li>
-    <li>Email: <a href="mailto:ukaay123@gmail.com">ukaay123@gmail.com </a> </li>
-    <li>Telegram: @Dmitry_B95</li>
-  </ul>
-    </main> 
-  <hr>
-  <main class="flex item-3">
-  <h2>Education:</h2>
-<ul> 
-  <li> <a href="https://bseu.by" target="_blank">BSEU</a> (2013-2017) </li>
-</ul>
-</main>
-<hr>
-<main class="flex item-4">
-<h2>About:</h2>
-<p>
-  I am 28 years old.<br>
-  I work a ASO Manager in product IT company.<br>
-  Decided to become a web developer.<br>
-  I want to gain knowledge and skills that will allow me to become a Fron-end developer.
-</p>
-</main>
-<hr>
-<main class="flex item-5">
-<h2>Skills:</h2>
-<ol>
-  <li>HTML</li>
-  <li>CSS</li>
-  <li>Git, GitHub</li>
-  <li>VS Code</li>
-  <li>JavsSkript</li>
-</ol>
-</main>
-<hr>
-<main class="flex item-6">
-<h2>Example code:</h2>
-<pre> 
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <div class="container">
+      <div class="flex item-1">
+        <h1 id="Dmitry">Dmitry Berdnik</h1>
+      </div>
+      <hr />
+      <div class="flex item-2">
+        <h2>Contact:</h2>
+        <ul>
+          <li>Mobile phone: +375333590326</li>
+          <li>
+            GitHub:
+            <a href="https://github.com/Dmitry0109" target="_blank"
+              >Dmitry0109
+            </a>
+          </li>
+          <li>
+            Email: <a href="mailto:ukaay123@gmail.com">ukaay123@gmail.com </a>
+          </li>
+          <li>Telegram: @Dmitry_B95</li>
+        </ul>
+      </div>
+      <hr />
+      <div class="flex item-3">
+        <h2>Education:</h2>
+        <ul>
+          <li>
+            <a href="https://bseu.by" target="_blank">BSEU</a> (2013-2017)
+          </li>
+        </ul>
+      </div>
+      <hr />
+      <div class="flex item-4">
+        <h2>About:</h2>
+        <p>
+          I am 28 years old.<br />
+          I work a ASO Manager in product IT company.<br />
+          Decided to become a web developer.<br />
+          I want to gain knowledge and skills that will allow me to become a
+          Fron-end developer.
+        </p>
+      </div>
+      <hr />
+      <div class="flex item-5">
+        <h2>Skills:</h2>
+        <ol>
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>Git, GitHub</li>
+          <li>VS Code</li>
+          <li>JavsSkript</li>
+        </ol>
+      </div>
+      <hr />
+      <div class="flex item-6">
+        <h2>Example code:</h2>
+        <pre> 
   <code>
 &lt!DOCTYPE html>
 &lthtml lang="en"&gt
@@ -67,15 +77,15 @@
 &lt/html&gt
   </code>
 </pre>
-</main>
-<hr>
-<main class="flex item-7">
-<h2>Languages:</h2>
-<ul>
-  <li>Russian - Native</li>
-  <li>English - A1</li>
-</ul>
-</main> 
-</div>
-</body>
+      </div>
+      <hr />
+      <div class="flex item-7">
+        <h2>Languages:</h2>
+        <ul>
+          <li>Russian - Native</li>
+          <li>English - A1</li>
+        </ul>
+      </div>
+    </div>
+  </body>
 </html>
