--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <li>CSS</li>
           <li>Git, GitHub</li>
           <li>VS Code</li>
-          <li>JavsSkript</li>
+          <li>JavaSkript</li>
         </ol>
       </div>
       <hr />
